fix: adjust overflow properties in CheckboxInTable and body for improved scrolling behavior

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -132,5 +132,5 @@ body {
   opacity: 0.8;
   background-image: radial-gradient(#64bafd 0.75px, #fffffe 0.75px);
   background-size: 15px 15px;
-  overflow-y: hidden;
+  overflow-y: auto;
 }
